Closed
Bug 74983
Opened 24 years ago
Closed 24 years ago
Can't start Composer or MessageCompose
Categories
(Core :: DOM: Editor, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla0.9
People
(Reporter: kinmoz, Assigned: kinmoz)
Details
Attachments
(1 file)
|
490 bytes,
patch
|
Details | Diff | Splinter Review |
In my 11:30 pm 04/06/01 Mozilla Win32 Debug build, I can't startup Composer or
MsgCompose because I can't get past the constant nsComposerController
assertions. Here's a tiny snipped of the assertions being thrown:
###!!! ASSERTION: illegal refcnt: 'PRInt32(mRefCnt) >= 0', file Y:\mozilla\edito
r\base\nsComposerController.cpp, line 47
###!!! Break: at file Y:\mozilla\editor\base\nsComposerController.cpp, line 47
###!!! ASSERTION: nsComposerController not thread-safe: 'owningThread == NS_Curr
entThread()', file y:\mozilla\xpcom\base\nsDebug.cpp, line 524
###!!! Break: at file y:\mozilla\xpcom\base\nsDebug.cpp, line 524
###!!! ASSERTION: illegal refcnt: 'PRInt32(mRefCnt) >= 0', file Y:\mozilla\edito
r\base\nsComposerController.cpp, line 47
###!!! Break: at file Y:\mozilla\editor\base\nsComposerController.cpp, line 47
###!!! ASSERTION: nsComposerController not thread-safe: 'owningThread == NS_Curr
entThread()', file y:\mozilla\xpcom\base\nsDebug.cpp, line 524
###!!! Break: at file y:\mozilla\xpcom\base\nsDebug.cpp, line 524
###!!! ASSERTION: nsComposerController not thread-safe: 'owningThread == NS_Curr
entThread()', file y:\mozilla\xpcom\base\nsDebug.cpp, line 524
###!!! Break: at file y:\mozilla\xpcom\base\nsDebug.cpp, line 524
###!!! ASSERTION: illegal refcnt: 'PRInt32(mRefCnt) >= 0', file Y:\mozilla\edito
r\base\nsComposerController.cpp, line 47
Comment 2•24 years ago
|
||
sr=scc
Comment 3•24 years ago
|
||
r=shaver
Fix checked into Trunk:
mozilla/editor/base/nsComposerController.cpp revision 1.2
Status: NEW → RESOLVED
Closed: 24 years ago
Priority: -- → P1
Resolution: --- → FIXED
Target Milestone: --- → mozilla0.9
You need to log in
before you can comment on or make changes to this bug.
Description
•