Fix for bug #74983: Can't start Composer or MessageCompose Add missing NS_INIT_REFCNT macro. r=shaver@mozilla.org,mjudge@netscape.com sr=scc@mozilla.org